Trying to fix footer spacing in mobile view

--- a/css/sass_styles.css
+++ b/css/sass_styles.css
@@ -323,7 +323,7 @@
 .social-box {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   list-style-type: none;
 }
 @media (min-width: 768px) {
@@ -335,7 +335,7 @@
 .social-links, .social-last {
   height: 30px;
   width: 30px;
-  margin: 0 10px;
+  padding: 0 10px;
 }
 
 .social-last {
