--- a/scss/partials/_footer-styling.scss
+++ b/scss/partials/_footer-styling.scss
@@ -35,7 +35,7 @@
   
 .social-box {
     @include flex(row);
-    justify-content: center;
+    justify-content: space-around;
     list-style-type: none;
     @media (min-width: $tab) {
         justify-content: center;
@@ -45,7 +45,7 @@
 .social-links {
     height: 30px;
     width: 30px;
-    margin: 0 10px;
+    padding: 0 10px;
 }
 
 .social-last {
